# attck-pe

./: .env  .env copy  .gitignore  README.md  code_generator.py  executor.py  main.py  main2.py  prompts.py  pyproject.toml  requirements.txt  ruff.toml
attck_pe/: __main__.py  cli.py  code_reader.py  executor.py  main.py  planner.py
attck_pe/planner/: planner.py
attck_pe/prompts/: __init__.py  prompt.py
attck_pe/prompts/templates/: code_generator_context.txt  code_parser.txt  planner.txt
output/: InjectBinaryToChildThread.ps1  RPCNamedPipeScript.ps1  start_job_with_binary.ps1
tests/webtest/: main.py
